--- a/Resources/Maps/train.yml
+++ b/Resources/Maps/train.yml
@@ -5144,7 +5144,7 @@ entities:
             1: 44680
           -7,-63:
             1: 61184
-            3: 12
+            5: 12
           -7,-62:
             1: 64443
           -7,-61:
@@ -5152,14 +5152,14 @@ entities:
           -7,-60:
             1: 4369
           -7,-64:
-            4: 12
-            5: 3072
+            3: 12
+            4: 3072
           -6,-64:
-            4: 1
-            5: 256
+            3: 1
+            4: 256
             1: 17476
           -6,-63:
-            3: 1
+            5: 1
             1: 5956
           -6,-62:
             1: 4096
@@ -5169,7 +5169,8 @@ entities:
             0: 52428
           -6,-65:
             1: 17476
-            4: 257
+            6: 1
+            3: 256
           -6,-60:
             1: 1
           -6,-59:
@@ -5188,16 +5189,17 @@ entities:
           -7,-68:
             0: 60928
           -7,-66:
-            4: 3084
+            3: 3084
           -7,-65:
-            4: 3084
+            6: 12
+            3: 3072
           -6,-68:
             0: 65024
           -6,-67:
             1: 18176
             0: 14
           -6,-66:
-            4: 257
+            3: 257
             1: 17476
           -5,-68:
             0: 30464
@@ -5287,21 +5289,6 @@ entities:
           temperature: 293.15
           moles:
           - 0
-          - 6666.982
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.15
-          moles:
-          - 0
           - 0
           - 0
           - 0
@@ -5320,6 +5307,36 @@ entities:
           - 0
           - 0
           - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
+          temperature: 293.15
+          moles:
+          - 0
+          - 6666.982
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
+          temperature: 293.15
+          moles:
+          - 0
+          - 0
+          - 0
+          - 6666.982
           - 0
           - 0
           - 0
@@ -35431,6 +35448,23 @@ entities:
     - type: Transform
       pos: 3.82151,-7.050895
       parent: 2
+- proto: CigaretteSpent
+  entities:
+  - uid: 17419
+    components:
+    - type: Transform
+      pos: -6.6816535,-145.1474
+      parent: 2
+  - uid: 17420
+    components:
+    - type: Transform
+      pos: -6.2129035,-145.56956
+      parent: 2
+  - uid: 17421
+    components:
+    - type: Transform
+      pos: -6.4941535,-147.79767
+      parent: 2
 - proto: CigarGoldCase
   entities:
   - uid: 5286
@@ -37937,6 +37971,13 @@ entities:
     components:
     - type: Transform
       pos: 17.5,-163.5
+      parent: 2
+- proto: CyberPen
+  entities:
+  - uid: 17417
+    components:
+    - type: Transform
+      pos: 0.48309928,21.516363
       parent: 2
 - proto: CyborgEndoskeleton
   entities:
@@ -76306,7 +76347,7 @@ entities:
       pos: 8.5,-176.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -147491.25
+      secondsUntilStateChange: -147969.53
       state: Closing
   - uid: 11227
     components:
@@ -88911,6 +88952,13 @@ entities:
     - type: Transform
       pos: -1.5,-11.5
       parent: 2
+- proto: SpawnMobGoji
+  entities:
+  - uid: 17422
+    components:
+    - type: Transform
+      pos: 5.5,-383.5
+      parent: 2
 - proto: SpawnMobMcGriff
   entities:
   - uid: 13307
@@ -89496,6 +89544,13 @@ entities:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 3.5,-35.5
+      parent: 2
+- proto: StackOfCigs
+  entities:
+  - uid: 17418
+    components:
+    - type: Transform
+      pos: -6.5907197,-144.5279
       parent: 2
 - proto: StairStage
   entities:
