--- a/Resources/Prototypes/Entities/Objects/Devices/Syndicate_Gadgets/reinforcement_teleporter.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Syndicate_Gadgets/reinforcement_teleporter.yml
@@ -105,7 +105,7 @@
       name: ghost-role-information-syndie-assaultborg-name
       description: ghost-role-information-syndie-assaultborg-description
       rules: ghost-role-information-silicon-rules
-      roleType: Silicon # TODO:ERRANT subvertedsilicion?
+      roleType: SubvertedSilicon
       raffle:
         settings: default
     - type: GhostRoleMobSpawner
