--- a/Resources/Prototypes/Catalog/Fills/Boxes/syndicate.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/syndicate.yml
@@ -67,3 +67,21 @@
     contents:
       - id: DeathRattleImplanter
         amount: 6
+
+- type: entity
+  parent: [BoxCardboard, BaseSyndicateContraband]
+  id: CopmbatBakeryKit
+  name: combat bakery kit
+  description: A kit of clandestine baked weapons. Packaging disintegrates when opened, leaving no evidence behind.
+  components:
+  - type: Sprite
+    layers:
+      - state: box_of_doom
+      - state: france
+  - type: SpawnItemsOnUse
+    items:
+      - id: WeaponCroissant
+        amount: 2
+      - id: WeaponBaguette
+    sound:
+      path: /Audio/Effects/unwrap.ogg
