--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -63,6 +63,10 @@
     softness: 5
     autoRot: true
   - type: Ringer
+  - type: DeviceNetwork
+    deviceNetId: Wireless
+    receiveFrequencyId: PDA
+    prefix: device-address-prefix-console
   - type: WirelessNetworkConnection
     range: 500
   - type: CartridgeLoader
