--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/smokables.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/smokables.yml
@@ -1,3 +1,4 @@
+#Spawners
 - type: entity
   id: RandomSmokables
   name: random smokable spawner
@@ -11,31 +12,10 @@
     layers:
       - sprite: Objects/Consumable/Smokeables/Cigarettes/Packs/black.rsi
         state: closed
-  - type: RandomSpawner
-    prototypes:
-      - Cigarette
-      - Cigarette
-      - Cigarette
-      - Cigar
-      - CigPackGreen
-      - CigPackRed
-      - CigPackBlue
-      - CigPackBlack
-      - PackPaperRollingFilters
-    chance: 0.95
-    rarePrototypes:
-      - RandomSoakedCigarette
-      - Joint
-      - JointRainbow
-      - Blunt
-      - BluntRainbow
-      - CigPackMixedMedical
-      - CigPackMixed
-      - CigPackMixedNasty
-      - CigarGold
-      - CigaretteSpent
-      - CigarSpent
-    rareChance: 0.05
+  - type: EntityTableSpawner
+    table: !type:NestedSelector
+      tableId: SmokablesTable
+      prob: 0.95
 
 - type: entity
   id: RandomSoakedCigarette
@@ -50,26 +30,67 @@
     layers:
       - sprite: Objects/Consumable/Smokeables/Cigarettes/cigarette.rsi
         state: unlit-icon
-  - type: RandomSpawner
-    prototypes:
-      - CigaretteOmnizine
-      - CigaretteIron
-      - CigaretteDylovene
-      - CigaretteDermaline
-      - CigaretteIpecac
-      - CigaretteBicaridine
-      - CigaretteDexalin
-      - CigarettePax
-      - CigaretteBbqSauce
-      - CigaretteBlackPepper
-      - CigaretteOmnizine
-      - CigaretteCapsaicinOil
-      - CigaretteBread
-      - CigaretteMilk
-      - CigaretteBanana
-      - CigaretteSpaceDrugs
-      - CigaretteMuteToxin
-      - CigaretteMold
-      - CigaretteLicoxide
-      - CigaretteWeldingFuel
-      - CigaretteTHC
+  - type: EntityTableSpawner
+    table: !type:NestedSelector
+      tableId: SoakedSmokesTable
+
+#Tables
+- type: entityTable
+  id: SmokablesTable
+  table: !type:GroupSelector
+    children:
+    #Just a cig
+    - !type:GroupSelector
+      weight: 36
+      children:
+      - id: Cigarette
+    #Uncommon
+    - !type:GroupSelector
+      weight: 9
+      children:
+      - id: Cigar
+      - id: CigPackGreen
+      - id: CigPackRed
+      - id: CigPackBlue
+      - id: CigPackBlack
+      - id: PackPaperRollingFilters
+    #Rare
+    - !type:GroupSelector
+      children:
+      - id: RandomSoakedCigarette
+      - id: Joint
+      - id: JointRainbow
+      - id: Blunt
+      - id: BluntRainbow
+      - id: CigPackMixedMedical
+      - id: CigPackMixed
+      - id: CigPackMixedNasty
+      - id: CigarGold
+      - id: CigaretteSpent
+      - id: CigarSpent
+
+- type: entityTable
+  id: SoakedSmokesTable
+  table: !type:GroupSelector
+    children:
+      - id: CigaretteOmnizine
+      - id: CigaretteIron
+      - id: CigaretteDylovene
+      - id: CigaretteDermaline
+      - id: CigaretteIpecac
+      - id: CigaretteBicaridine
+      - id: CigaretteDexalin
+      - id: CigarettePax
+      - id: CigaretteBbqSauce
+      - id: CigaretteBlackPepper
+      - id: CigaretteOmnizine
+      - id: CigaretteCapsaicinOil
+      - id: CigaretteBread
+      - id: CigaretteMilk
+      - id: CigaretteBanana
+      - id: CigaretteSpaceDrugs
+      - id: CigaretteMuteToxin
+      - id: CigaretteMold
+      - id: CigaretteLicoxide
+      - id: CigaretteWeldingFuel
+      - id: CigaretteTHC
