--- a/Resources/Prototypes/GameRules/unknown_shuttles.yml
+++ b/Resources/Prototypes/GameRules/unknown_shuttles.yml
@@ -1,19 +1,27 @@
-# Add your new event to this RandomRule if you want it to happen via the basic/ramping schedulers.
-- type: entity
-  parent: BaseGameRule
-  id: RandomUnknownShuttleRule
-  components:
-  - type: RandomRule
-    selectableGameRules:
+# Shuttle Game Rule Tables -- If you dont add your rules to these they wont be used by the games schedulers.
+
+- type: entityTable
+  id: UnknownShuttlesFriendlyTable
+  table: !type:AllSelector # we need to pass a list of rules, since rules have further restrictions to consider via StationEventComp
+    children:
     - id: UnknownShuttleCargoLost
-      orGroup: Shuttles
     - id: UnknownShuttleTravelingCuisine
-      orGroup: Shuttles
     - id: UnknownShuttleDisasterEvacPod
-      prob: 1.2
-      orGroup: Shuttles
+    - id: UnknownShuttleHonki
+
+- type: entityTable
+  id: UnknownShuttlesFreelanceTable
+  table: !type:AllSelector # we need to pass a list of rules, since rules have further restrictions to consider via StationEventComp
+    children:
     - id: UnknownShuttleSyndieEvacPod
-      orGroup: Shuttles
+
+- type: entityTable
+  id: UnknownShuttlesFriendlyTable
+  table: !type:AllSelector # we need to pass a list of rules, since rules have further restrictions to consider via StationEventComp
+    children:
+    - id: LoneOpsSpawn
+
+# Shuttle Game Rules
 
 - type: entity
   abstract: true
