--- a/Resources/Prototypes/game_presets.yml
+++ b/Resources/Prototypes/game_presets.yml
@@ -8,6 +8,7 @@
   rules:
     - RampingStationEventScheduler
     - GameRuleMeteorScheduler
+    - SpaceTrafficControlEventScheduler
     - BasicRoundstartVariation
 
 - type: gamePreset
@@ -22,6 +23,8 @@
     - Zombie
     - RampingStationEventScheduler
     - GameRuleMeteorScheduler
+    - SpaceTrafficControlEventScheduler
+    - BasicRoundstartVariation
 
 - type: gamePreset
   id: Extended
@@ -34,6 +37,7 @@
   rules:
   - BasicStationEventScheduler
   - GameRuleMeteorScheduler
+  - SpaceTrafficControlEventScheduler
   - BasicRoundstartVariation
 
 - type: gamePreset
@@ -45,6 +49,7 @@
   showInVote: false #4boring4vote
   description: greenshift-description
   rules:
+  - SpaceTrafficControlFriendlyEventScheduler 
   - BasicRoundstartVariation
 
 - type: gamePreset
@@ -68,6 +73,8 @@
   rules:
     - BasicStationEventScheduler
     - GameRuleMeteorScheduler
+    - SpaceTrafficControlEventScheduler
+    - BasicRoundstartVariation
 
 - type: gamePreset
   id: SecretGreenshift #For Admin Use: Runs Greenshift but shows "Secret" in lobby.
@@ -76,6 +83,9 @@
   name: secret-title
   showInVote: false #Admin Use
   description: secret-description
+  rules:
+  - SpaceTrafficControlFriendlyEventScheduler 
+  - BasicRoundstartVariation
 
 - type: gamePreset
   id: Sandbox
@@ -92,6 +102,7 @@
   id: Traitor
   alias:
     - traitor
+    - tator
   name: traitor-title
   description: traitor-description
   showInVote: false
@@ -100,6 +111,7 @@
     - SubGamemodesRule
     - BasicStationEventScheduler
     - GameRuleMeteorScheduler
+    - SpaceTrafficControlEventScheduler
     - BasicRoundstartVariation
 
 - type: gamePreset
@@ -127,6 +139,7 @@
     - SubGamemodesRule
     - BasicStationEventScheduler
     - GameRuleMeteorScheduler
+    - SpaceTrafficControlEventScheduler
     - BasicRoundstartVariation
 
 - type: gamePreset
@@ -143,6 +156,7 @@
     - SubGamemodesRule
     - BasicStationEventScheduler
     - GameRuleMeteorScheduler
+    - SpaceTrafficControlEventScheduler
     - BasicRoundstartVariation
 
 - type: gamePreset
@@ -160,4 +174,5 @@
   - Zombie
   - BasicStationEventScheduler
   - GameRuleMeteorScheduler
+  - SpaceTrafficControlEventScheduler
   - BasicRoundstartVariation
