--- a/Resources/Prototypes/Entities/Objects/Devices/shock_collar.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/shock_collar.yml
@@ -29,6 +29,8 @@
   - type: GuideHelp
     guides:
       - Security
+  - type: StealTarget
+    stealGroup: ClothingNeckShockCollar
   - type: Tag
     tags:
     - WhitelistChameleon
