Changed Science Boots to not be contraband

--- a/Resources/Prototypes/Entities/Clothing/Shoes/magboots.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/magboots.yml
@@ -63,7 +63,7 @@
     stealGroup: ClothingShoesBootsMagAdv
 
 - type: entity
-  parent: [ClothingShoesBootsMagBase, BaseScienceContraband]
+  parent: [ClothingShoesBootsMagBase]
   id: ClothingShoesBootsMagSci
   components:
   - type: Sprite
