--- a/Resources/Prototypes/Entities/Objects/Misc/Flora/glowshroom.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/Flora/glowshroom.yml
@@ -19,6 +19,7 @@
       energy: 0.5
       softness: 0.5
       color: "#AFDDAF"
+      castShadows: false
     - type: Construction
       graph: GlowshroomStructure
       node: plantedGlowshrooms
