--- a/Resources/Maps/cog.yml
+++ b/Resources/Maps/cog.yml
@@ -11454,7 +11454,7 @@ entities:
       pos: -20.5,55.5
       parent: 12
     - type: Door
-      secondsUntilStateChange: -2570.8865
+      secondsUntilStateChange: -2633.12
       state: Opening
     - type: DeviceLinkSink
       invokeCounter: 1
@@ -13854,6 +13854,8 @@ entities:
       pos: 11.5,2.5
       parent: 12
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 3224
 - proto: AirTankFilled
@@ -141477,6 +141479,13 @@ entities:
     - type: Transform
       pos: 15.5,51.5
       parent: 12
+- proto: SpawnPointCaptain
+  entities:
+  - uid: 27323
+    components:
+    - type: Transform
+      pos: -51.5,20.5
+      parent: 12
 - proto: SpawnPointCargoTechnician
   entities:
   - uid: 8507
@@ -141572,6 +141581,13 @@ entities:
     components:
     - type: Transform
       pos: 29.5,30.5
+      parent: 12
+- proto: SpawnPointHeadOfPersonnel
+  entities:
+  - uid: 27324
+    components:
+    - type: Transform
+      pos: -43.5,22.5
       parent: 12
 - proto: SpawnPointHeadOfSecurity
   entities:
