--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/taco.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/taco.yml
@@ -19,6 +19,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
+        canReact: false # Dont want cause reactions inside tacos after merging ingredients
         maxVol: 10
         reagents:
         - ReagentId: Nutriment
