--- a/Resources/Textures/LobbyScreens/attributions.yml
+++ b/Resources/Textures/LobbyScreens/attributions.yml
@@ -57,3 +57,8 @@
   license: "CC-BY-NC-SA-3.0"
   copyright: "GetOutMarutak,aka.Snicket on Discord/github/Cara/Ko-fi"
   source: "https://github.com/space-wizards/space-station-14"
+
+- files: ["starbow.webp"]
+  license: "CC-BY-NC-SA-3.0"
+  copyright: "By Doner#4037 on discord"
+  source: "https://github.com/space-wizards/space-station-14"
