--- a/Resources/Prototypes/Accents/word_replacements.yml
+++ b/Resources/Prototypes/Accents/word_replacements.yml
@@ -524,6 +524,7 @@
     accent-german-words-30: accent-german-words-replace-30
     accent-german-words-31: accent-german-words-replace-31
     accent-german-words-32: accent-german-words-replace-32
+    accent-german-words-32-2: accent-german-words-replace-32
     accent-german-words-33: accent-german-words-replace-33
     accent-german-words-34: accent-german-words-replace-34
     accent-german-words-35: accent-german-words-replace-35
