--- a/Resources/Prototypes/GameRules/meteorswarms.yml
+++ b/Resources/Prototypes/GameRules/meteorswarms.yml
@@ -57,7 +57,7 @@
   components:
   - type: GameRule
   - type: BasicStationEventScheduler
-    minimumTimeUntilFirstEvent: 35 # 300 # 5 min # Yell at me if I dont fix this back to 300
+    minimumTimeUntilFirstEvent: 300 # 5 min
     minMaxEventTiming:
       min: 750 # 12.5 min
       max: 930 # 17.5 min
@@ -70,7 +70,7 @@
   components:
   - type: GameRule
   - type: BasicStationEventScheduler
-    minimumTimeUntilFirstEvent: 35 # 300 # 5 min # Yell at me if I dont fix this back to 300
+    minimumTimeUntilFirstEvent: 300 # 5 min 
     minMaxEventTiming:
       min: 750 # 12.5 min
       max: 930 # 17.5 min
